src/test/resources/org/xmlcml/www/convention/dictionary/invalid/non-dictionary-cml-element-present-2.cml
<?xml version="1.0" encoding="utf-8" ?>
<cml xmlns="http://www.xml-cml.org/schema"
     xmlns:xhtml="http://www.w3.org/1999/xhtml"
     xmlns:dc="http://purl.org/dc/elements/1.1/"
     xmlns:conventions="http://www.xml-cml.org/convention/"
     xmlns:dictionaries="http://www.xml-cml.org/dictionary/"
     convention="conventions:dictionary">
    <dc:title>test file for http://www.xml-cml.org/convention/dictionary convention</dc:title>
    <dc:description>there should only be "cml", "dictionary", "entry", "description" and "definition" elements form the cml namespace present in a dictionary</dc:description>
    <dc:author>J A Townsend</dc:author>
    <dc:rights>Copyright J A Townsend jat45@cantab.net 2009.</dc:rights>
    <dc:date>2010-12-23</dc:date>
    <dictionary title="dummy test dictionary" namespace="http://www.xml-cml.org/dictionary/dummy/" dictionaryPrefix="dummy">
        <molecule id="m1"/>
        <description>
            <xhtml:p>
                A dummy dictionary for testing
            </xhtml:p>
        </description>
        <entry id="e1" term="first entry" title="first entry" dataType="xsd:string" unitType="dictionaries:dummy" units="dictionaries:dummy">
            <definition>
                <xhtml:p>
                    Fist definition
                </xhtml:p>
            </definition>
            <description>
                <xhtml:p>
                    the first entry in the dictionary
                </xhtml:p>
            </description>
        </entry>
        <entry id="e2" term="second entry" title="second entry" dataType="xsd:string" unitType="dictionaries:dummy" units="dictionaries:dummy">
            <definition>
                <xhtml:p>
                    Second definition
                </xhtml:p>
            </definition>
            <description>
                <xhtml:p>
                    the second entry in the dictionary
                </xhtml:p>
            </description>
        </entry>
        <entry id="last" term="last entry" title="last entry" dataType="xsd:string" unitType="dictionaries:dummy" units="dictionaries:dummy">
            <definition>
                <xhtml:p>
                    Final definition
                </xhtml:p>
            </definition>
            <description>
                <xhtml:p>
                    the last entry in the dictionary
                </xhtml:p>
            </description>
        </entry>
    </dictionary>
</cml>